Weird issue with .portfolio on mobile - temporary hack
- left: value is producing two different results when comparing mobile
and desktop...odd

--- a/css/sections/_portfolio.scss
+++ b/css/sections/_portfolio.scss
@@ -87,8 +87,8 @@ section.portfolio {
 
         .work-focus {
             height: 0; opacity: 0; /* hides the element so as not to impact height of the entire section */
-            left: -100%;
             position: relative;
+            left: -100%;
             max-width: 50%;
             @include display(flex);
             @include flex-direction(row);
@@ -97,16 +97,13 @@ section.portfolio {
 
             .work-focus.slide {
                 height: 100%; opacity: 1; /* div is no longer hidden when this class is applied */
-                background: white;
-                visibility: visible;
                 left: -50%;
                 @include transition(all $default-transition*2 ease);
             }
 
             .work-container.remove, .work-focus.remove {
                 height: 0; opacity: 0;
-                visibility: hidden;
-                @include transition(all $default-transition*2 ease);
+                @include transition(all $default-transition*3 ease);
             }
 
             .work-focus .return {
@@ -201,21 +198,23 @@ section.portfolio {
 	          @include justify-content(center);
             @include align-items(center);
             @include flex-wrap(wrap);
-            max-width: 100% !important;
+            //max-width: 100% !important;
         }
 
-    .work-focus .sub-container {
-        padding: 0;
-    }
+        .work-focus.slide {
+          left: 0%;
+        }
 
 	.overlay p {
-		font-size: 1.5rem;
+		font-size: 1.2rem;
 		max-width: 100%;
 	}
 
 }
 
 @media (min-width: 768px) { /* layout for 768px and up */
+
+
 
 }
 
