--- a/css/style.scss
+++ b/css/style.scss
@@ -39,7 +39,6 @@ section {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-    padding: 0 $default-padding/2;
 }
 
 a {
